[package]
name = "test-async-bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
once_cell = "1.17.1"
log = "0.4"
pretty_env_logger = "0.4"