[package]
name = "async-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync"] }
once_cell = "1.17.1"
async-bus-macros = { version = "*", path = "../async-bus-macros"}

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
log = "0.4"
pretty_env_logger = "0.4"
