[package]
name = "make-message-bus"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
categories = ["data-structures"]
description = "Generate a pub-sub bus for use in async applications"
documentation = "https://docs.rs/make-message-bus"
edition = "2021"
keywords = ["static", "message-bus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/message-bus"
readme = "../README.md"

[dependencies]
tokio = { version = "1", features = ["sync"] }
once_cell = "1.17.1"
message-bus-macros = { version = "0.1.0", path = "../message-bus-macros"}

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
log = "0.4"
pretty_env_logger = "0.4"
